fix: padding to top and alignment

--- a/src/components/Donations/Logo/logo.css
+++ b/src/components/Donations/Logo/logo.css
@@ -8,6 +8,15 @@
 .logo__img {
     height: 2rem;
     grid-row: 1 / -1;
+    align-self: center;
+}
+
+.logo__title {
+    align-self: start;
+}
+
+.logo__link {
+    align-self: end;
 }
 
 .logo__link:link,
